# pTNS

./: README.md
MPS/python/: Ex1-1.ipynb  Ex1-1.py  Ex1-2.ipynb  Ex1-2.py  Ex2-1.ipynb  Ex2-1.py  Ex2-2.ipynb  Ex2-2.py  Ex3-1.ipynb  Ex3-1.py  Ex3-2.ipynb  Ex3-2.py  iTEBD.py
TPS/c++/: CMakeLists.txt  Lattice.hpp  Makefile  Model_Transverse_Ising_Square.cpp
TPS/c++/sample_AKLT/: Makefile  Model_AKLT_S1.cpp
TPS/c++/sample_Kagome/: Makefile  Model_Kagome.cpp
TPS/c++/sample_Kitaev/: Makefile  Model_Kitaev.cpp
TPS/python/: Lattice.py  Lattice_Parameters.py  Model_Transverse_Ising_Square.py  PEPS_Basics.py  PEPS_Parameters.py  Square_lattice_CTM.py
TPS/python/sample_AKLT/: Model_AKLT_S1.py  Model_AKLT_S2.py
TPS/python/sample_FF_Square/: Lattice.py  Model_FF_Square.py
TPS/python/sample_Kagome/: Model_Kagome.py  PEPS_Parameters.py
TPS/python/sample_Kitaev/: Model_Kitaev.py  PEPS_Parameters.py
TPS/python/sample_SUN/: Model_SUN_square.py
TRG/python/: Make_EC.py  Plot_TRG_1-1.py  Plot_TRG_2-1.py  Plot_TRG_2-2.py  TRG.py  TRG_tutorial1-1.py  TRG_tutorial1-3.py  TRG_tutorial2-2.py  TensorNetwork_TRG.py
TRG/python/exact/: memo.txt
